fix: Reduces padding and font-size on wallet buttons
Without this, the text gets cut off by overflow hidden because it doesn't
fit in the buttons with the image and padding.

--- a/backend/sass/common.blocks/_wallet.scss
+++ b/backend/sass/common.blocks/_wallet.scss
@@ -36,7 +36,8 @@
 
 .wallet__table-button {
   color: $tertiary-color;
-  padding: 0 15px;
+  padding: 0 10px;
+  font-size: 0.8em;
   margin-right: $medium-margin;
 
   text-overflow: ellipsis;
